dependencias y clases de configuración de seguridad añadidas

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
+
+security:
+  cors:
+    allowed-origin: ${CORS_ALLOWED_ORIGIN:'*'}
