--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,19 @@
 		<tag/>
 		<url/>
 	</scm>
+
 	<properties>
 		<java.version>21</java.version>
 	</properties>
+
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>Authentication library packages</name>
+			<url>https://maven.pkg.github.com/gmarcg00/auth-lib</url>
+		</repository>
+	</distributionManagement>
+
 	<dependencies>
 
 		<dependency>
