Personalización del AuthenticationEntryPoint y Manejador de autenticación exitosos. Funcionando a falta de comprobar más proveedores y la conexión con un frontal

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -14,6 +14,13 @@ spring:
     username: spring
     password: boot
     from: admin@app.io
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: 258570681234-0nc5nu48h51ahnl7upf656r388c4p503.apps.googleusercontent.com
+            client-secret: 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
 
 security:
   jwt:
