--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,11 +23,17 @@ spring:
     username: ${MAIL_USERNAME}
     password: ${MAIL_PASSWORD}
     from: ${MAIL_FROM}
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_SECRET}
 
 security:
   cors:
     allowed-origin: ${CORS_ALLOWED_ORIGIN:'*'}
-
   jwt:
     secret: ${JWT_SECRET}
     expiration-access-token: ${EXPIRATION_ACCESS_TOKEN}
