--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,5 +44,6 @@ info:
     title: ${INFO_APP_TITLE}
 
 server:
-  host:
-    front: ${SERVER_HOST_FRONT}
+  front:
+    host: ${SERVER_HOST_FRONT}
+    external-login-redirect-uri: ${SERVER_EXTERNAL_LOGIN_REDIRECT_URI}
