--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.3.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>dev</groupId>
-	<artifactId>auth.lib</artifactId>
-	<version>1.2.0-SNAPSHOT</version>
-	<name>auth.lib</name>
+	<groupId>com.github.gmarcg00</groupId>
+	<artifactId>authentication</artifactId>
+	<version>1.1.0</version>
+	<name>authentication</name>
 	<description>Authentication library for Spring Boot applications</description>
 	<url/>
 	<licenses>
