--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.github.gmarcg00</groupId>
 	<artifactId>authentication</artifactId>
-	<version>1.1.0</version>
+	<version>1.2.0-SNAPSHOT</version>
 	<name>authentication</name>
 	<description>Authentication library for Spring Boot applications</description>
 	<url/>
